testing content editing

--- a/content/projects/unkey.mdx
+++ b/content/projects/unkey.mdx
@@ -1,5 +1,5 @@
 ---
-title: unkey.dev
+title: Welcome AGIFront
 description: Unkey is an open source API Key management solution. It allows you to create, manage and validate API Keys for your users. It’s built with security and speed in mind.
 date: "2023-07-01"
 url: https://unkey.dev
@@ -10,4 +10,10 @@ repository: chronark/unkey
 
 [![](https://unkey.dev/images/landing/app.png)](https://planetfall.io)
 
-Unkey is an open source API Key management solution. It allows you to create, manage and validate API Keys for your users. It’s built with security and speed in mind.
+Hello and welcome! I'm Rick, a seasoned full stack web developer with a passion for Artificial Intelligence (AI). I've been in the field of web development since 1995, when I purchased my first domain name. Over the years, I've successfully founded three Internet companies, with one leading to a seven-figure exit. My experience has given me a deep understanding of the web hosting domain and the transformative power of the internet. Now, I believe AI is the next frontier that will bring about profound changes in our world.
+
+This blog is my platform to share insights and discoveries in the expansive field of AI. We'll delve into various aspects of Full Stack Development and Open Source Software, exploring topics like ChatGPT, OpenAI, HuggingFace, Flowise, Langflow, and the latest software releases.
+
+While AI can often seem complex and filled with technical jargon, I'm committed to making this content engaging, welcoming, and easy to understand. This blog is designed to be a resource for everyone, from those just beginning their journey into AI, to seasoned professionals seeking the latest trends and insights.
+
+So, I invite you to join me on this journey. Bookmark this page, subscribe for regular updates, and become part of this exploration into AI. I look forward to embarking on this adventure with you!
