--- a/content/projects/welcome.mdx
+++ b/content/projects/welcome.mdx
@@ -1,14 +1,14 @@
 ---
-title: Welcome AGIFront
-description: Unkey is an open source API Key management solution. It allows you to create, manage and validate API Keys for your users. It’s built with security and speed in mind.
-date: "2023-07-01"
-url: https://unkey.dev
+title: Welcome AGI Front
+description: Welcome to AGIFront, a dedicated space for exploring the exciting world of Artificial Intelligence (AI). We'll dive into groundbreaking AI technologies, Full Stack Development, Open Source Software, and the latest software releases. This blog is your gateway to understanding AI, making it accessible and engaging for all. Join us on this exciting journey!
+date: "2023-07-18"
+url: https://www.agifront.com
 published: true
-repository: chronark/unkey
+repository: GitMaxd/chronark.com
 ---
 
 
-[![](https://unkey.dev/images/landing/app.png)](https://planetfall.io)
+
 
 Hello and welcome! I'm Rick, a seasoned full stack web developer with a passion for Artificial Intelligence (AI). I've been in the field of web development since 1995, when I purchased my first domain name. Over the years, I've successfully founded three Internet companies, with one leading to a seven-figure exit. My experience has given me a deep understanding of the web hosting domain and the transformative power of the internet. Now, I believe AI is the next frontier that will bring about profound changes in our world.
 
