--- a/content/projects/planetfall.mdx
+++ b/content/projects/planetfall.mdx
@@ -1,15 +1,13 @@
 ---
-title: planetfall.io
-description: I'm building a SAAS providing global latency monitoring for your APIs and websites from edge locations around the world. Have you ever wondered how fast your API is in any part of the world? Planetfall allows you to find out and monitor it continuously.
+title: flowiseai.com
+description: Introducing Flowise AI: The game-changing open source software that brings the power of artificial intelligence within your reach, completely free of cost! Designed with user-friendliness in mind, Flowise allows you to tap into the potential of AI with ease.
 date: "2023-04-01"
-url: https://planetfall.io
+url: https://flowiseai.com
 published: true
   
 ---
 
 
-[![](/planetfall.png)](https://planetfall.io)
+[![](/flowiseai.jpg)](https://flowiseai.com)
 
-Planetfall is a SaaS platform that provides global latency monitoring and synthetic monitoring for APIs. With over 60 regions to monitor from, customers can gain insights into the true performance of their API by checking latency from around the world. 
-Planetfall offers custom timeouts, threshold notifications, and real-time alerts for potential performance issues. Additionally, customers can create custom status pages to share with their customers, which can display availability and latency for every region. Planetfall offers a free tier that includes 100k checks per month and scales as customers grow. Overall, Planetfall helps customers stay in control of their API's performance, improve communication with their customers, and build trust.
-
+With Flowise, you can develop intelligent applications, automate tasks, and unlock a new world of innovation. It's time to explore the endless possibilities of AI without breaking the bank. Join the open source community and experience the transformative benefits of Flowise AI today!
