--- a/content/projects/planetfall.mdx
+++ b/content/projects/planetfall.mdx
@@ -1,10 +1,10 @@
 ---
 title: flowiseai.com
-description: Introducing Flowise AI: The game-changing open source software that brings the power of artificial intelligence within your reach, completely free of cost! Designed with user-friendliness in mind, Flowise allows you to tap into the potential of AI with ease.
-date: "2023-04-01"
+description: Introducing Flowise AI - The game-changing open source software that brings the power of artificial intelligence within your reach, completely free of cost! Designed with user-friendliness in mind, Flowise allows you to tap into the potential of AI with ease.
+date: "2023-07-17"
 url: https://flowiseai.com
 published: true
-  
+
 ---
 
 
