--- a/content/projects/unkey.mdx
+++ b/content/projects/unkey.mdx
@@ -4,7 +4,7 @@ description: Welcome to AGIFront, a dedicated space for exploring the exciting w
 date: "2023-07-18"
 url: https://www.agifront.com
 published: true
-repository: GitMaxd/chronark.com
+repository: GitMaxd
 ---
 
 
@@ -17,3 +17,5 @@ This blog is my platform to share insights and discoveries in the expansive fiel
 While AI can often seem complex and filled with technical jargon, I'm committed to making this content engaging, welcoming, and easy to understand. This blog is designed to be a resource for everyone, from those just beginning their journey into AI, to seasoned professionals seeking the latest trends and insights.
 
 So, I invite you to join me on this journey. Bookmark this page, subscribe for regular updates, and become part of this exploration into AI. I look forward to embarking on this adventure with you!
+
+ -Rick
