--- a/content/projects/unkey.mdx
+++ b/content/projects/unkey.mdx
@@ -1,5 +1,5 @@
 ---
-title: Welcome AGI Front
+title: Welcome to AGI Front
 description: Welcome to AGIFront, a dedicated space for exploring the exciting world of Artificial Intelligence (AI). We'll dive into groundbreaking AI technologies, Full Stack Development, Open Source Software, and the latest software releases. This blog is your gateway to understanding AI, making it accessible and engaging for all. Join us on this exciting journey!
 date: "2023-07-18"
 url: https://www.agifront.com
